syntax = "proto3";
package protocol;

option go_package = "api";

import "core/Tron.proto";

service wallet_api {
    rpc CreateWallet(PasswordMessage) returns(AddressMessage){};
    rpc Signature(AddressPasswordHashMessage) returns(SignatureMessage){};
    rpc SignatureTx(SignatureTxMessage) returns (Transaction) {};
}

message SignatureTxMessage {
    Transaction transaction = 1;
    string password = 2;
}

message AddressPasswordHashMessage {
    string address = 1;
    string password = 2;
    bytes hash = 3;
}

message SignatureMessage {
    bytes signature = 1;
}

message PasswordMessage {
    string password = 1;
}

message AddressMessage {
    string address = 1;
}